@@ -33,8 +33,6 @@ tst-cputimer3.out, Error 1
 #
 #   AT_EXECFN is unsupported
 tst-auxv.o, Error 1
-#   system() is only partially wrapped, the fork is not cancel point
-tst-cancel-wrappers.out, Error 1
 #   probably due to kernel
 tst-shm.out, Error 1
 #
