@@ -14,6 +14,11 @@ glibc (2.19-6) UNRELEASED; urgency=high
   * debian/rules.d/debhelper.mk: fix dh_strip call in stage1.  Closes: 
     #754350.
 
+  [ Petr Salinger ]
+  * kfreebsd/local-sysdeps.diff: update to revision 5490 (from glibc-bsd).
+  * kfreebsd/local-fbtl.diff: likewise.
+  * update testsuite-checking/expected-results-*-kfreebsd-gnu-*
+
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 06 Jul 2014 22:34:19 +0200
 
 glibc (2.19-5) unstable; urgency=medium
